--- a/tinacg/vertfolia/templates/vertfolia/index.html
+++ b/tinacg/vertfolia/templates/vertfolia/index.html
@@ -2,7 +2,6 @@
 {% load vertfolia_tags %}
 
 <head>
-  <!--
 	<link rel="stylesheet" href="{% static "js/jquery.treeview.css" %}" />
 	<link rel="stylesheet" href="{% static "js/screen.css" %}"/>
 	<script src="{% static "js/jquery-1.11.0.min.js" %}"></script>
@@ -10,30 +9,21 @@
 	<script type="text/javascript">
   $(function () {
 	$("#tree").treeview({
-	  collapsed: true,
+	 // collapsed: true,
 	  animated: "fast",
 	  control:"#sidetreecontrol",
 	  prerendered: true,
 	  persist: "location"
 	});
   })
--->
 	</script>
   </head>
 
-Welcome to VertFolia
+Welcome to VertFolia, {{ user.username }}!
 
 <div id="sidetree">
   <div class="treeheader">&nbsp;</div>
   <div id="sidetreecontrol"> <a href="?#">Collapse All</a> | <a href="?#">Expand All</a> </div>
 
-  {% display_tree top_account account_balances %}
-
+  {% display_tree top_account account_balances True %}
 </div>
-
-<button id="mybutton">Click me</button>
-
-<script>
-  document.getElementById("mybutton").addEventListener('click', function (event) {
-  document.getElementById("account_balance_2").innerHTML = "ok" });
-</script>
