--- a/tinacg/vertfolia/templates/vertfolia/index.html
+++ b/tinacg/vertfolia/templates/vertfolia/index.html
@@ -15,6 +15,12 @@
 	  persist: "location"
 	});
   })
+
+  // Handle clicks on tree
+  function show_transactions(account_id) {
+	alert(account_id);
+  }
+
 	</script>
   </head>
 
