--- a/tinacg/vertfolia/static/js/jquery-ui-1.10.4.custom/css/flick/jquery-ui-1.10.4.custom.css
+++ b/tinacg/vertfolia/static/js/jquery-ui-1.10.4.custom/css/flick/jquery-ui-1.10.4.custom.css
@@ -410,12 +410,12 @@
 	border: 1px solid #dddddd;
 	background: #f6f6f6 url("images/ui-bg_highlight-soft_100_f6f6f6_1x100.png") 50% 50% repeat-x;
 	font-weight: bold;
-	color: #0073ea;
+	color: #999999;
 }
 .ui-state-default a,
 .ui-state-default a:link,
 .ui-state-default a:visited {
-	color: #0073ea;
+	color: #999999;
 	text-decoration: none;
 }
 .ui-state-hover,
@@ -446,12 +446,12 @@
 	border: 1px solid #dddddd;
 	background: #ffffff url("images/ui-bg_glass_65_ffffff_1x400.png") 50% 50% repeat-x;
 	font-weight: bold;
-	color: #ff0084;
+	color: #0055ff;
 }
 .ui-state-active a,
 .ui-state-active a:link,
 .ui-state-active a:visited {
-	color: #ff0084;
+	color: #0055ff;
 	text-decoration: none;
 }
 
