--- a/tinacg/vertfolia/templates/vertfolia/index.html
+++ b/tinacg/vertfolia/templates/vertfolia/index.html
@@ -10,7 +10,7 @@
 
 	<!-- jquery UI -->
 	<link rel="stylesheet" href="{% static "js/jquery-ui-1.10.4.custom/css/flick/jquery-ui-1.10.4.custom.css" %}" />
-    
+	
 	<script src="{% static "js/jquery-ui-1.10.4.custom/js/jquery-ui-1.10.4.custom.js" %}"></script>
 	
 	<script type="text/javascript">
@@ -24,13 +24,13 @@
 
 	// jquery ui
 
-    $("#start_date").datepicker({ dateFormat: "d/m/yy" });
-    $("#end_date").datepicker({ dateFormat: "d/m/yy" });
+	$("#start_date").datepicker({ dateFormat: "d/m/yy" });
+	$("#end_date").datepicker({ dateFormat: "d/m/yy" });
 
-    $("#add_transaction_day").datepicker({ dateFormat: "d/m/yy" });
+	$("#add_transaction_day").datepicker({ dateFormat: "d/m/yy" });
 
-    $("#tabs").tabs();
-    
+	$("#tabs").tabs();
+	
 	var account_short_names = [
 {% autoescape off %}
 	 "{{ account_short_names }}"
@@ -39,15 +39,15 @@
 
 	$("#add_transaction_debit_name").autocomplete({
 	  source: account_short_names,
-      delay: 5
+	  delay: 5
 	});
 	$("#add_transaction_credit_name").autocomplete({
 	  source: account_short_names,
-      delay: 5
+	  delay: 5
 	});
 	$("#active_account").autocomplete({
 	  source: account_short_names,
-      delay: 5
+	  delay: 5
 	});
 
   })
@@ -87,7 +87,7 @@ function tree_account_click_handler(account_short_name) {
   <i><a id="last_week_autofill" href="?#">Last week</a></i> |
   <i><a id="same_day_autofill" href="?#">Same day</a></i></br>
   
-  <br>  
+  <br>	
   Start date: <input type="text" id="start_date" name="start_date_formatted" value="{{ earliest_date|date:"j/n/Y" }}" size="8">
   
   End date: <input type="text" id="end_date" name="end_date_formatted" value="{{ time|date:"j/n/Y" }}" size="8">
@@ -97,56 +97,56 @@ function tree_account_click_handler(account_short_name) {
 
   <!-- TABS -->
   <div id="tabs">
-    <ul>
-    <li><a href="#tabs_add_transaction"><b>Add transaction</b></a></li>
-    <li><a href="#tabs_view_transactions" id="view_transactions_tab_link"><b>View transactions</b></a></li>
+	<ul>
+	<li><a href="#tabs_add_transaction"><b>Add transaction</b></a></li>
+	<li><a href="#tabs_view_transactions" id="view_transactions_tab_link"><b>View transactions</b></a></li>
 
-    <div id="tabs_add_transaction">
-      <br><br>
-      <form id="add_transaction_form">
-        <!-- action="{% url 'add_transaction' %}" method="get"> -->
-        {% csrf_token %}
+	<div id="tabs_add_transaction">
+	  <br><br>
+	  <form id="add_transaction_form">
+		<!-- action="{% url 'add_transaction' %}" method="get"> -->
+		{% csrf_token %}
 
-        Date: <input id="add_transaction_day" name="day" size="10" value="{{ time|date:"j/n/Y" }}">
-        Time: <input id="add_transaction_time" name="time" size="10" value="{{ time|date:"H:i" }}">
+		Date: <input id="add_transaction_day" name="day" size="10" value="{{ time|date:"j/n/Y" }}">
+		Time: <input id="add_transaction_time" name="time" size="10" value="{{ time|date:"H:i" }}">
 
-        <br>
-        
-        desc: <input type="text" name="description" size="40"><br>
-        value: <input type="text" name="value" size="10"><br>
+		<br>
+		
+		desc: <input type="text" name="description" size="40"><br>
+		value: <input type="text" name="value" size="10"><br>
   
-        debit acct: <input type="text" name="debit" size="9" id="add_transaction_debit_name">
-        credit acct: <input type="text" name="credit" size="9" id="add_transaction_credit_name">
+		debit acct: <input type="text" name="debit" size="9" id="add_transaction_debit_name">
+		credit acct: <input type="text" name="credit" size="9" id="add_transaction_credit_name">
 
-        <br>
+		<br>
   
   <!-- Click interface -->
 <!--  debit acct num: <input type="text" name="debit" size="4" id="add_transaction_debit_id" onclick="selected_field='add_transaction_debit'; this.value='<< click';">
   credit acct num: <input type="text" name="credit" size="4" id="add_transaction_credit_id" onclick="selected_field='add_transaction_credit'; this.value='<< click';;">
   -->
 
-        <input type="submit">
-      </form>
-      <pre class="transactions_list"><div id="latest_transactions">{% for transaction in latest_transactions %}{{ transaction }}
+		<input type="submit">
+	  </form>
+	  <pre class="transactions_list"><div id="latest_transactions">{% for transaction in latest_transactions %}{{ transaction }}
 {% endfor %}</div></pre>
-      
-      <form id="latest_transactions_form">
-        {% csrf_token %}
-      </form>
-      
-    </div> <!-- close add_transaction -->
+	  
+	  <form id="latest_transactions_form">
+		{% csrf_token %}
+	  </form>
+	  
+	</div> <!-- close add_transaction -->
 
-    <div id="tabs_view_transactions">
-      <br><br>
+	<div id="tabs_view_transactions">
+	  <br><br>
 
-      <form id="view_transactions_form">
-        {% csrf_token %}
-        Account short name: <input type="text" name="active_account" id="active_account" size="8" value="{{ user.username }}" onclick="this.value=''">
-        <input type="submit">
-      </form>
+	  <form id="view_transactions_form">
+		{% csrf_token %}
+		Account short name: <input type="text" name="active_account" id="active_account" size="8" value="{{ user.username }}" onclick="this.value=''">
+		<input type="submit">
+	  </form>
 
-      <pre class="transactions_list"><div id="transactions"></div></pre>
-    </div>
+	  <pre class="transactions_list"><div id="transactions"></div></pre>
+	</div>
 
 
   </div> <!-- CLOSE TABS -->
@@ -160,27 +160,27 @@ function tree_account_click_handler(account_short_name) {
 <script>
 
 function days_back(delta_days) {
+  if (typeof delta_days !== "number") {
+    return delta_days;
+  }
+    
   var end_date_string = $("#end_date").val();
   var end_date_components = end_date_string.split("/");
 
   var today = new Date(end_date_components[2], end_date_components[1] - 1,
-                       end_date_components[0]);
+					   end_date_components[0]);
   var today_in_millis = today.valueOf();
   var millis_difference = delta_days * 24 * 60 * 60 * 1000;
   var previous_date = new Date(today_in_millis - millis_difference);
-    
+
   return previous_date.getUTCDate() + "/" + (previous_date.getUTCMonth() + 1) + "/" + previous_date.getUTCFullYear();
 }
 
 function add_autofill_handler(id, date_replacement) {
-  if (typeof date_replacement === "number") {
-    date_replacement = days_back(date_replacement);
-  }
-  
   $(id).click(function (event) {
-    $("#start_date").val(date_replacement);
-    update_views();
-    event.preventDefault();
+	$("#start_date").val(days_back(date_replacement));
+	update_views();
+	event.preventDefault();
   });
 }
 
@@ -204,13 +204,13 @@ function update_views() {
   var serializedData = form.serialize();
 
   if (request) {
-    request.abort();
+	request.abort();
   }
   
   request = $.ajax({
-    url: "{% url 'update_tree' %}",
-    type: "POST",
-    data: serializedData
+	url: "{% url 'update_tree' %}",
+	type: "POST",
+	data: serializedData
   });
 
   request.done(function (response, textStatus, jqXHR) {
@@ -218,18 +218,18 @@ function update_views() {
 		// update tree balances
 		$('#account_balance_'+key).html(val);
 	  });
-      
-      // update "View transactions" tab
-      if ($("#active_account").val() != "") {
-        $("#view_transactions_form").submit();
-      }
+	  
+	  // update "View transactions" tab
+	  if ($("#active_account").val() != "") {
+		$("#view_transactions_form").submit();
+	  }
   });
   request.fail(function (jqXHR, textStatus, errorThrown) {
 	alert("update tree error: " + errorThrown);
   });
 
   request.always(function () {
-    //    alert("always update tree");
+	//	  alert("always update tree");
   });
   
 }
@@ -260,8 +260,8 @@ $("#end_date").change(function (event) {
 	});
 
 	request.done(function (response, textStatus, jqXHR) {
-      update_views();
-      //      $("#latest_transactions_form").submit();
+	  update_views();
+	  //	  $("#latest_transactions_form").submit();
 	});
 
 	request.fail(function (jqXHR, textStatus, errorThrown) {
@@ -278,7 +278,7 @@ $("#end_date").change(function (event) {
 
 $("#view_transactions_form").submit(function (event) {
   if (request) {
-    request.abort();
+	request.abort();
   }
   var form = $(this);
   var serializedData = form.serialize();
@@ -288,14 +288,14 @@ $("#view_transactions_form").submit(function (event) {
   serializedData += "&end_date_formatted=" + $("#end_date").val().replace(/\//g, "%2F");
   
   request = $.ajax({
-    url: "{% url 'view_transactions' %}",
-    type: "POST",
-    data: serializedData
+	url: "{% url 'view_transactions' %}",
+	type: "POST",
+	data: serializedData
   });
 
   request.done(function (response, textStatus, jqXHR) {
-    $("#transactions").html(response);
-    $("#latest_transactions_form").submit();
+	$("#transactions").html(response);
+	$("#latest_transactions_form").submit();
   });
 
   request.fail(function (jqXHR, textStatus, errorThrown) {
@@ -311,20 +311,20 @@ $("#view_transactions_form").submit(function (event) {
 
 $("#latest_transactions_form").submit(function (event) {
   if (request) {
-    request.abort();
+	request.abort();
   }
 
   var form=$(this);
   var serializedData = form.serialize();
   
   request = $.ajax({
-    url: "{% url 'view_latest_transactions' %}",
-    type: "POST",
-    data: serializedData
+	url: "{% url 'view_latest_transactions' %}",
+	type: "POST",
+	data: serializedData
   });
 
   request.done(function (response, textStatus, jqXHR) {
-    $("#latest_transactions").html(response);
+	$("#latest_transactions").html(response);
   });
 
   request.fail(function (jqXHR, textStatus, errorThrown) {
