--- a/tinacg/vertfolia/static/js/jquery-ui-1.10.4.custom/css/flick/jquery-ui-1.10.4.custom.css
+++ b/tinacg/vertfolia/static/js/jquery-ui-1.10.4.custom/css/flick/jquery-ui-1.10.4.custom.css
@@ -394,7 +394,7 @@
 }
 .ui-widget-header {
 	border: 1px solid #dddddd;
-	background: #dddddd; /* url("images/ui-bg_highlight-soft_50_dddddd_1x100.png") 50% 50% repeat-x; */
+	background: #e5e0ff; /* url("images/ui-bg_highlight-soft_50_dddddd_1x100.png") 50% 50% repeat-x; */
 	color: #444444;
 	/* font-weight: bold; */
 }
